Fix dataset panel spacing and empty field render

--- a/packages/web/src/components/DatasetDetails/DatasetDetails.module.css
+++ b/packages/web/src/components/DatasetDetails/DatasetDetails.module.css
@@ -54,7 +54,7 @@ hr {
   font-size: 16px;
   line-height: 26px !important;
   position: relative;
-  height: 80%;
+  height: 85%;
   padding: var(--margin) 0;
 }
 
