--- a/packages/web/src/components/DatasetDetails/DatasetDetailsRow.module.css
+++ b/packages/web/src/components/DatasetDetails/DatasetDetailsRow.module.css
@@ -2,7 +2,7 @@
   /* flex parent */
   display: flex;
   flex-direction: row;
-  padding-bottom: 20px;
+  padding-bottom: 16px;
 }
 
 .cell {
